Bug 92687 - Rendering: Rotated text blurry and unreadable with GTK3
Summary: Rendering: Rotated text blurry and unreadable with GTK3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: All Linux (All)
: highest normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-07-11 19:33 UTC by Luke
Modified: 2016-10-25 19:20 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of example chart (344.18 KB, image/png)
2015-07-11 19:33 UTC, Luke
Details
Chart used in screenshot (13.55 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-07-11 19:33 UTC, Luke
Details
Screenshoot in Windows7x64 (67.46 KB, image/png)
2015-07-12 10:13 UTC, m_a_riosv
Details
Rotated Text in Calc is Also Blurry (8.56 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-16 02:28 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-07-11 19:33:00 UTC
Created attachment 117182 [details]
Screenshot of example chart

Steps to reproduce
1. Create a chart in a recent build of 5.1
2. Rotate the text
3. Compare with 4.4 or earlier
Comment 1 Luke 2015-07-11 19:33:35 UTC
Created attachment 117183 [details]
Chart used in screenshot
Comment 2 Joel Madero 2015-07-11 20:18:20 UTC
Confirmed:

Ubuntu 15.04
Version: 5.1.0.0.alpha1+
Build ID: ec44f1ae39e44f55ef1b1625fc5f638d2dbf5256
Locale: en-US (en_US.UTF-8)

setting:
NEW
Normal - can prevent high quality work;
Highest - pretty clear cut issue that many users could see, font is unreadable, regression
Comment 3 Joel Madero 2015-07-12 06:37:43 UTC
We don't generally switch a bug from All to Linux(All) unless we have proof that the problem does not exist on Windows and/or OSX....did you test it on those platforms? 99% of our bugs are on all platforms
Comment 4 m_a_riosv 2015-07-12 10:13:41 UTC
Created attachment 117187 [details]
Screenshoot in Windows7x64

Win7x64
Version: 5.1.0.0.alpha1+ (x64) Build ID: 728b7f18c989954912a4b2ad2778c9eeba181f2c
  TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-11_01:08:08


Clearly depends on the use of  Menu/Tools/Options/LibreOffice/View - Graphics - use antialising.
Comment 5 Michael Weghorn 2015-07-12 15:21:04 UTC
bibisect result:

 929145def84a0b1ea3ddc6b011d6f8e41a279758 is the first bad commit
commit 929145def84a0b1ea3ddc6b011d6f8e41a279758
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Sat Jun 20 05:49:47 2015 +0200

    2015-06-20: source-hash-3ecef8cedb215e49237a11607197edc91639bfcd

:100644 100644 000c5fdaa8375e3db5a1cb1885c62c419266cf38 b94f9b4a25ad33e41de70c75a81e84fb1ea03584 M	build-info.txt
:040000 040000 ab6cc818ec0767b31e4a5e477bc5e15554c2964a 8a42e3a9a83601198477090bea99d5c032baa618 M	opt

---

$ git bisect log
# bad: [43d971d013fc757bfbe0fdec122ed1a9a693bd47] 2015-07-08: source-hash-ff669d1c7f692052534d1136d1ff4220433f8542
# good: [e4b0a61cedc6ac0e65a4a110fd83edd8295f4856] 2014-11-20: source-hash-d273a60bfdbf9bb7623bed38667ec0647753157c
git bisect start 'master' 'oldest'
# good: [2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73] 2015-06-13: source-hash-a9286c302e96258f32d13fb66aced25750e82cd3
git bisect good 2b9d93baaf7341c57f25ff71fef3fcd2e10c6a73
# bad: [12ee5d282ca61a17d52d3ce0ea31ae69fada21b4] 2015-06-25: source-hash-e8938f2ddb5efa8a34d05995cd55cf337c7aaeff
git bisect bad 12ee5d282ca61a17d52d3ce0ea31ae69fada21b4
# good: [66d7220a7df180fc7b6e7a7f3620d86272c3d838] 2015-06-19: source-hash-ba70050dc37f82306a8a3c5815372a4b9fff18fc
git bisect good 66d7220a7df180fc7b6e7a7f3620d86272c3d838
# bad: [c6cd95766d60d4fbbff22cca84d42feea2a600cb] 2015-06-22: source-hash-d16e154c627ecc0cb21aaf4b28f7f5ae48ebbde1
git bisect bad c6cd95766d60d4fbbff22cca84d42feea2a600cb
# bad: [2585085ca772383156fa67688430f7b5437af8a3] 2015-06-21: source-hash-d2cefbe7effbee079c05a5a8234305650618fdc1
git bisect bad 2585085ca772383156fa67688430f7b5437af8a3
# bad: [929145def84a0b1ea3ddc6b011d6f8e41a279758] 2015-06-20: source-hash-3ecef8cedb215e49237a11607197edc91639bfcd
git bisect bad 929145def84a0b1ea3ddc6b011d6f8e41a279758
# first bad commit: [929145def84a0b1ea3ddc6b011d6f8e41a279758] 2015-06-20: source-hash-3ecef8cedb215e49237a11607197edc91639bfcd
Comment 6 Luke 2015-07-15 21:07:19 UTC
$ SAL_USE_VCLPLUGIN=gtk soffice
resolves this issue. 

So it looks like 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=031a347668e56c1b38c0539d30e9a1cbb808ca02

Is responsible for this issue. 

Caolán,
Could you kindly take a look at this issue? Thanks!
Comment 7 Xisco Faulí 2015-09-02 13:31:52 UTC
Add 'bisected' to Keywords as the exact commit has been determined
Comment 8 Luke 2015-10-16 02:28:14 UTC
Created attachment 119656 [details]
Rotated Text in Calc is Also Blurry

It's not just charts that are affected by this GTK3 issue. Any text that's rotated in Calc is also blurry. If the text is smaller than 10pt, it becomes illegible.
Comment 9 Luke 2015-11-12 18:47:37 UTC
Using: $ SAL_USE_VCLPLUGIN=gtk3 ./soffice
I binary bisected this issue down to: 78ecdbc2f69b9d812cf879f662e7c1277d3c9b07..88f94fa76ffbfc3abba885480d7d2d2e05107d0a

Any builds before http://cgit.freedesktop.org/libreoffice/core/commit/?id=88f94fa76ffbfc3abba885480d7d2d2e05107d0a do come with the gtk3 VCL plugin. 

Caolán,
Would it help to try to git bisect this with a git cherry-pick of 88f94fa76ffbfc3abba885480d7d2d2e05107d0a or is that a waste of time?
Comment 10 Caolán McNamara 2015-11-12 20:28:25 UTC
bisecting will almost certainly show up nothing. Its presumably the underlying "headless" backend that is just poor at rotated text and we need to rework that.
Comment 11 Commit Notification 2015-11-20 11:40:09 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=742da70e6dd2407641835cbcac54b09aeddcb9db

Resolves: tdf#92687 implement drawPolyPolygon via cairo

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2015-11-20 11:53:05 UTC
https://gerrit.libreoffice.org/#/c/20083/ for 5-0 backport
Comment 13 Commit Notification 2015-11-26 20:33:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7eb8f82a493b416203546a5bab6066f3e78fef33&h=libreoffice-5-0

Resolves: tdf#92687 implement drawPolyPolygon via cairo

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Robinson Tryon (qubit) 2015-12-17 09:18:23 UTC Comment hidden (obsolete)