Resolves: tdf#92687 implement drawPolyPolygon via cairo

modeled on the quartz impl

(cherry picked from commit 742da70e6dd2407641835cbcac54b09aeddcb9db)

Change-Id: I2f6776c14c7350954932df2bffcca36172f13473